--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
   height: 100%;
   bottom: 0;
   right: 0;
-  animation: floor-animation .5s infinite linear;
+  animation: floor-animation .7s infinite linear;
 }
 
 .cloud1 {
@@ -50,8 +50,50 @@ body {
 .naruto {
   position: absolute;
   bottom: 20px;
-  left: 20px;
+  left: 0;
   width: 150px;
+}
+
+.jump {
+  animation: jump 700ms ease-out;
+}
+
+.enemy {
+  position: absolute;
+  bottom: 28px;
+  width: 50px;
+  /* left: 20px; */
+  filter: brightness(.9);
+  animation: enemies-animation 2s infinite linear;
+}
+
+@keyframes enemies-animation {
+  from {
+    right: -100px;
+  }
+
+  to {
+    right: 100%;
+  }
+}
+
+@keyframes jump {
+  0% {
+    bottom: 20px;
+  }
+
+  40% {
+    bottom: 150px;
+  }
+
+  60% {
+    bottom: 150px;
+  }
+
+  100% {
+    bottom: 20px;
+  }
+
 }
 
 @keyframes cloud-1-animation {
@@ -81,11 +123,5 @@ body {
 
   to {
     right: 0;
-  }
-}
-
-@media (max-width: 820px) {
-  .naruto {
-    width: 120px;
   }
 }
